--- a/app/src/main/res/layout/guide_aty.xml
+++ b/app/src/main/res/layout/guide_aty.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
+
     <LinearLayout 
         android:id="@+id/guide_aty_linear"
         android:orientation="horizontal"
@@ -19,6 +20,16 @@
         android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/start"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_above="@id/guide_aty_linear"
+        android:layout_centerHorizontal="true"
+        android:padding="10dp"
+        android:onClick="ClickEvent"
+        android:clickable="true"
+        android:text="开始旅程"/>
         
 
 </RelativeLayout>
