--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,20 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="line_height">1dp</dimen>
+
+    <!--title-->
+    <dimen name="dp_60">60dp</dimen>
+    <dimen name="dp_15">15dp</dimen>
+    <dimen name="title_left_size">16sp</dimen>
+    <dimen name="title_center_size">17sp</dimen>
+    <dimen name="title_right_size">16sp</dimen>
+    <dimen name="title_height">50dp</dimen>//全部title的高度
+    <dimen name="navigation_height">75dp</dimen>//系统导航栏的高度
+    <dimen name="status_bar_height">25dp</dimen>//状态栏的高度（测试）
+
+    <!--MainActivity-->
+    <dimen name="dp_main_aty_marginTop">20dp</dimen>
+    <dimen name="sp_main_aty_text">18sp</dimen>
 </resources>
