--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,10 @@
     <!--MainActivity-->
     <dimen name="dp_main_aty_marginTop">20dp</dimen>
     <dimen name="sp_main_aty_text">18sp</dimen>
+    <!--FilmReviewActivity-->
+    <dimen name="film_aty_indicatorsize">18sp</dimen>
+    <!--<film_item-->
+    <dimen name="film_item_numPading">6dp</dimen>
+    <dimen name="film_item_nameML">20dp</dimen>
+    <dimen name="film_item_numSize">18sp</dimen>
 </resources>
